# ChangeLog for dev-ruby/snmplib
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/snmplib/ChangeLog,v 1.6 2005/08/02 12:43:52 dholm Exp $

  02 Aug 2005; David Holm <dholm@gentoo.org> snmplib-0.5.1.ebuild:
  Added to ~ppc.

*snmplib-0.5.1 (01 Aug 2005)

  01 Aug 2005; Michael Kohl <citizen428@gentoo.org> +snmplib-0.5.1.ebuild:
  Version bump.

  12 Mar 2005; Michael Kohl <citizen428@gentoo.org> snmplib-0.4.0.ebuild:
  Marked stable on x86.

  20 Dec 2004; Michael Kohl <citizen428@gentoo.org> snmplib-0.4.0.ebuild:
  Fixed dodoc.

*snmplib-0.4.0 (20 Dec 2004)

  20 Dec 2004; Michael Kohl <citizen428@gentoo.org> snmplib-0.3.0.ebuild,
  +snmplib-0.4.0.ebuild:
  Version bump; marked 0.3.0 stable on x86.

*snmplib-0.3.0 (08 Nov 2004)

  08 Nov 2004; Michael Kohl <citizen428@gentoo.org> +metadata.xml,
  +snmplib-0.3.0.ebuild:
  Initial import. Ebuild submitted by pyon <gentoo@pyon.net>, closing bug #67047
