@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/snmplib
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/snmplib/ChangeLog,v 1.6 2005/08/02 12:43:52 dholm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/snmplib/ChangeLog,v 1.7 2005/08/08 20:23:13 citizen428 Exp $
+
+  08 Aug 2005; Michael Kohl <citizen428@gentoo.org> -snmplib-0.3.0.ebuild,
+  -snmplib-0.4.0.ebuild:
+  Cleaned out older versions that don't seem to be available upstream anymore.
 
   02 Aug 2005; David Holm <dholm@gentoo.org> snmplib-0.5.1.ebuild:
   Added to ~ppc.
